# beag-training

./: README.md  env  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_data.csv  train.py
core/: config.py
data/: __init__.py  augment.py  generator.py  validator.py
data/templates/: __init__.py
disagreement/: scorer.py
frameworks/: __init__.py  catalog.json  catalog.py  catalog_cli.py  crosswalk.py  embeddings.json  embeddings.py  grounding.py  vectorizer.pkl
frameworks/fetchers/: __init__.py  cmmc.py  nist_800_53.py  nist_csf.py
frontier/: deepseek.py  prompts.py
ingest/: __init__.py  casehold.py
model/: output_schema.py
notebooks/: kaggle_train.ipynb
onprem/: Dockerfile  config.yaml  docker-compose.yml  export.py  recipe.py  run.py  train.py  unsloth_adapter.py  validate.py
output/: generated.jsonl  generated_augmented.jsonl  generated_new.jsonl
scripts/: generate_more.py
