[project]
name = "beag-model-training"
version = "0.1.0"
description = "Beag Model Training — train domain-specific LoRA adapters"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pyarrow>=17.0.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "torch>=2.4.0",
    "unsloth",
    "accelerate",
    "bitsandbytes",
    "xformers",
    "optimum[onnxruntime]",
    "onnxruntime",
    "transformers",
]

[project.scripts]
beag-catalog = "frameworks.catalog_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
